ported more wraps and using more ranges rather than my own iterators

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "subprojects/embree"]
 	path = subprojects/embree
 	url = https://github.com/embree/embree.git
+[submodule "subprojects/partio"]
+	path = subprojects/partio
+	url = https://github.com/mtao/partio
