--- a/tests/meson.build
+++ b/tests/meson.build
@@ -9,8 +9,20 @@ executable('test_vulkan_window', 'test_vulkan_window.cpp', dependencies: [visual
 
 
 test_iterators= executable('test_iterators', 'test_iterators.cpp', dependencies: [core_dep,catch2_dep])
-
 test('iterator test', test_iterators)
-test_eigen = executable('test_eigen', 'test_eigen.cpp', 'test_eigen_stl2eigen.cpp', dependencies: [core_dep,catch2_dep])
 
+
+test_eigen = executable('test_eigen', 'main.cpp', 'test_eigen_stl2eigen.cpp', dependencies: [core_dep,catch2_dep])
 test('eigen test', test_eigen)
+
+test_mesh_loading = executable('test_mesh_loading', 'main.cpp', 'test_mesh_loading.cpp', dependencies: [geometry_dep,catch2_dep])
+test('mesh_loading test', test_mesh_loading)
+
+
+geometry_test_sources = [
+  'test_winding_number.cpp',
+  'test_earclipping.cpp',
+]
+
+test_geometry = executable('test_geometry', 'main.cpp', geometry_test_sources, dependencies: [geometry_dep,catch2_dep])
+test('geometry test', test_geometry)
