fixing build for ubuntu

--- a/meson.build
+++ b/meson.build
@@ -3,18 +3,36 @@ project('balsa', 'cpp',
   default_options : ['warning_level=3', 'cpp_std=c++20'])
 
 
+
+
+# min versions
+fmt_version = '>=8.0.1'
+spdlog_version = '>=1.9.2'
+eigen_version = '>=3.4.0'
+# range_v3_version = ''
+
+
+
+
 vulkan_dep = dependency('vulkan', required: false)
 
-spdlog_dep = dependency('spdlog', required: false)
-if not spdlog_dep.found()
-  spdlog_proj = subproject('spdlog')
-  spdlog_dep = dependency('spdlog')
+
+fmt_dep = dependency('fmt', required: false, version: fmt_version)
+if not fmt_dep.found()
+  fmt_proj = subproject('fmt')
+  fmt_dep = dependency('fmt', version: fmt_version)
 endif
 
-eigen_dep = dependency('eigen3', required: false)
+spdlog_dep = dependency('spdlog', required: false, version: spdlog_version)
+if not spdlog_dep.found()
+  spdlog_proj = subproject('spdlog')
+  spdlog_dep = dependency('spdlog', version: spdlog_version)
+endif
+
+eigen_dep = dependency('eigen3', required: false, version: eigen_version)
 if not eigen_dep.found()
   eigen_proj = subproject('eigen')
-  eigen_dep = dependency('eigen3')
+  eigen_dep = dependency('eigen3',version: eigen_version)
 endif
 
 range_v3_dep = dependency('range-v3', required: false)
@@ -40,6 +58,12 @@ if get_option('imgui')
     imgui_proj = subproject('imgui')
     imgui_dep = dependency('imgui')
   endif
+endif
+
+glm_dep = dependency('glm', required: false)
+if not glm_dep.found()
+  glm_proj = subproject('glm')
+  glm_dep = dependency('glm')
 endif
 
 
@@ -84,7 +108,7 @@ core_headers = [
 include_dir = include_directories('include')
 
 
-core_deps = [spdlog_dep, eigen_dep,range_v3_dep]
+core_deps = [spdlog_dep, eigen_dep,range_v3_dep, fmt_dep]
 
 if get_option('json')
   nlohmann_json_dep = dependency('nlohmann_json', required: false)
@@ -172,7 +196,7 @@ visualization_sources = [
 ]
 visualization_sources += colormap_shaders_sources
 
-visualization_dep = [core_dep,qt5_dep, vulkan_dep]
+visualization_dep = [core_dep,qt5_dep, vulkan_dep, glm_dep]
 visualization_lib = library('balsaVisualization', visualization_sources, dependencies: visualization_dep, include_directories: [include_dir, colormap_shaders_include_path])
 visualization_deps = declare_dependency(link_with: visualization_lib, dependencies: visualization_dep)
 
