--- a/tests/meson.build
+++ b/tests/meson.build
@@ -32,5 +32,5 @@ test('geometry test', test_geometry)
 
 
 
-test_scene_graph = executable('test_scene_graph', 'test_scene_graph.cpp', dependencies: [core_dep,catch2_dep])
+test_scene_graph = executable('test_scene_graph', 'test_scene_graph.cpp', dependencies: [visualization_deps,catch2_dep])
 test('scene_graph test', test_scene_graph)
