shaders almost compilng

--- a/meson.build
+++ b/meson.build
@@ -105,7 +105,9 @@ core_headers = [
   'include/eigen/types.hpp'
 ] + filesystem_headers
 
-include_dir = include_directories('include')
+include_dir = [include_directories('include')]
+# on ubuntu i had to install shaderc myself and I put it in my home directory...
+include_dir += include_directories('/home/mtao/.local/include')
 
 
 core_deps = [spdlog_dep, eigen_dep,range_v3_dep, fmt_dep]
@@ -182,6 +184,7 @@ geometry_headers = [
 # Visualization 
 #===========================================
 
+shaderc_dep = dependency('shaderc')
 qt5= import('qt5')
 qt5_dep = dependency('qt5', modules: ['Core', 'Gui'])
 subdir('resources')
@@ -193,12 +196,14 @@ visualization_sources = [
   'src/visualization/qt/vulkan/windows/scene.cpp',
   'src/visualization/qt/vulkan/renderers/scene.cpp',
   'src/visualization/qt/vulkan/film.cpp',
+  'src/visualization/shaders/abstract_shader.cpp',
+  'src/visualization/shaders/flat.cpp',
   glsl_resource_sources
 
 ]
 visualization_sources += colormap_shaders_sources
 
-visualization_dep = [core_dep,qt5_dep, vulkan_dep, glm_dep]
+visualization_dep = [core_dep,qt5_dep, vulkan_dep, glm_dep, shaderc_dep]
 visualization_lib = library('balsaVisualization', visualization_sources, dependencies: visualization_dep, include_directories: [include_dir, colormap_shaders_include_path])
 visualization_deps = declare_dependency(link_with: visualization_lib, dependencies: visualization_dep, include_directories: [colormap_shaders_include_path])
 
