--- a/tools/meson.build
+++ b/tools/meson.build
@@ -6,5 +6,7 @@ if not cxxopts_dep.found()
 endif
 
 
-executable('xyz_to_partio', 'xyz_to_partio.cpp', dependencies: [geometry_dep])
+if get_option('partio') 
+  executable('xyz_to_partio', 'xyz_to_partio.cpp', dependencies: [geometry_dep])
+endif
 executable('mesh_info', 'mesh_info.cpp', dependencies: [geometry_dep, cxxopts_dep])
