--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,3 +7,4 @@ option('protobuf', type : 'boolean', value : true, description : 'Use protobuf')
 option('partio', type : 'boolean', value : true, description : 'Use partio')
 option('imgui', type : 'boolean', value : true, description : 'Use imgui')
 option('igl', type : 'boolean', value : true, description : 'Use libigl')
+option('glfw', type : 'boolean', value : true, description : 'Use glfw')
