--- a/tests/meson.build
+++ b/tests/meson.build
@@ -7,8 +7,15 @@ endif
 
 test_asset_dir = meson.current_source_dir() / 'assets'
 
+vis_enabled = get_option('visualization')
 
-executable('test_vulkan_window', 'test_vulkan_window.cpp', dependencies: [visualization_deps])
+if vis_enabled
+  executable('test_vulkan_window', 'test_vulkan_window.cpp', dependencies: [visualization_deps])
+
+
+test_scene_graph = executable('test_scene_graph', 'test_scene_graph.cpp', dependencies: [visualization_deps,catch2_dep])
+test('scene_graph test', test_scene_graph)
+endif
 
 
 test_iterators= executable('test_iterators', 'test_iterators.cpp', dependencies: [core_dep,catch2_dep])
@@ -35,5 +42,3 @@ test('geometry test', test_geometry)
 
 
 
-test_scene_graph = executable('test_scene_graph', 'test_scene_graph.cpp', dependencies: [visualization_deps,catch2_dep])
-test('scene_graph test', test_scene_graph)
