updates that break testing

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,4 +7,6 @@ option('protobuf', type : 'boolean', value : true, description : 'Use protobuf')
 option('partio', type : 'boolean', value : true, description : 'Use partio')
 option('imgui', type : 'boolean', value : true, description : 'Use imgui')
 option('igl', type : 'boolean', value : true, description : 'Use libigl')
-option('visualization', type : 'boolean', value : true, description : 'Build visualization library')
+
+# visualization is disabled for now because nothing about it is working
+option('visualization', type : 'boolean', value : false, description : 'Build visualization library')
