trying to get qt working, but bug in qt seems to be problematic

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -7,8 +7,8 @@ test_asset_dir = meson.current_source_dir() / 'assets'
 vis_enabled = get_option('visualization')
 
 if vis_enabled
-  #executable('test_vulkan_window', 'test_vulkan_window.cpp', dependencies: [visualization_dep])
-  executable('test_vulkan_window_glfw', 'test_vulkan_window_glfw.cpp', dependencies: [visualization_dep])
+  executable('test_vulkan_window', 'test_vulkan_window.cpp', 'example_vulkan_scene.cpp', dependencies: [visualization_dep])
+  executable('test_vulkan_window_glfw', 'test_vulkan_window_glfw.cpp', 'example_vulkan_scene.cpp', dependencies: [visualization_dep])
 
 
   test_scene_graph = executable('test_scene_graph', 'test_scene_graph.cpp', dependencies: [visualization_dep,catch2_with_main_dep])
